Use Java 22 instead of Java 21 with preview features