@@ -62,7 +62,7 @@
   </issueManagement>
 
   <properties>
-    <version.java>21</version.java>
+    <version.java>22</version.java>
 
     <version.jna>5.13.0</version.jna>
   </properties>
@@ -110,7 +110,6 @@
           <configuration>
             <excludePackageNames>com.github.robtimus.os.windows.registry.foreign</excludePackageNames>
             <release>${version.java}</release>
-            <additionalOptions>--enable-preview</additionalOptions>
           </configuration>
         </plugin>
       </plugins>
@@ -120,11 +119,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -231,7 +225,6 @@
             -javaagent:${org.mockito:mockito-core:jar}
             <!-- Allow JUnit to access the test classes -->
             --add-opens com.github.robtimus.os.windows.registry/com.github.robtimus.os.windows.registry=ALL-UNNAMED
-            --enable-preview
           </argLine>
         </configuration>
       </plugin>
@@ -329,7 +322,6 @@
               <argLine>
                 @{argLine}
                 --add-opens com.github.robtimus.os.windows.registry/com.github.robtimus.os.windows.registry=ALL-UNNAMED
-                --enable-preview
               </argLine>
               <testSourceDirectory>${basedir}/src/it/java</testSourceDirectory>
             </configuration>
